@@ -1,3 +1,4 @@
+220805 add render video
 220805 finish bug fixed
 220804 RNN add step; add MR (Max Reward report)
 220804 add n-steps RNN
